[gd_scene load_steps=7 format=2]

[ext_resource path="res://World/SignPost.png" type="Texture" id=1]
[ext_resource path="res://novem___.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://World/TutorialSign.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.87522
height = 2.05201

[sub_resource type="DynamicFont" id=2]
size = 15
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="CircleShape2D" id=3]
radius = 22.9681

[node name="TutorialSign" type="Node2D"]
script = ExtResource( 3 )
fade_time = 0.5

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, -2.86073 )
shape = SubResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
margin_left = -91.6008
margin_top = -53.6436
margin_right = 92.3992
margin_bottom = -18.6436
custom_fonts/font = SubResource( 2 )
text = "Font example"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 3 )

[node name="ModulateTween" type="Tween" parent="."]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
